[gd_scene load_steps=23 format=2]

[ext_resource path="res://Files/background-day.png" type="Texture" id=1]
[ext_resource path="res://Files/base.png" type="Texture" id=2]
[ext_resource path="res://Files/bluebird-upflap.png" type="Texture" id=3]
[ext_resource path="res://Startground.gd" type="Script" id=4]
[ext_resource path="res://PlayerStart.gd" type="Script" id=5]
[ext_resource path="res://Files/bluebird-downflap.png" type="Texture" id=6]
[ext_resource path="res://Files/redbird-upflap.png" type="Texture" id=7]
[ext_resource path="res://Files/bluebird-midflap.png" type="Texture" id=8]
[ext_resource path="res://Files/redbird-midflap.png" type="Texture" id=9]
[ext_resource path="res://Files/redbird-downflap.png" type="Texture" id=10]
[ext_resource path="res://Files/yellowbird-upflap.png" type="Texture" id=11]
[ext_resource path="res://Files/yellowbird-midflap.png" type="Texture" id=12]
[ext_resource path="res://Files/yellowbird-downflap.png" type="Texture" id=13]
[ext_resource path="res://Files/Rate.png" type="Texture" id=14]
[ext_resource path="res://Files/scoreboard.png" type="Texture" id=15]
[ext_resource path="res://Files/play.png" type="Texture" id=16]
[ext_resource path="res://Files/FlappyBird.png" type="Texture" id=17]
[ext_resource path="res://Files/flappyrights.png" type="Texture" id=18]
[ext_resource path="res://StartScreen.gd" type="Script" id=19]
[ext_resource path="res://Files/Sounds/swoosh.wav" type="AudioStream" id=20]

[sub_resource type="TileSet" id=1]
0/name = "base.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 352, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 11 ) ],
"loop": true,
"name": "flapyellow",
"speed": 6.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 7 ) ],
"loop": true,
"name": "flapred",
"speed": 6.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 3 ) ],
"loop": true,
"name": "flapblue",
"speed": 6.0
} ]

[node name="StartScreen" type="Node2D"]
script = ExtResource( 19 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, -50 )
tile_set = SubResource( 1 )
cell_size = Vector2( 352, 112 )
format = 1
tile_data = PoolIntArray( 262144, 0, 0 )
script = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="background" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 143.577, 255.855 )
scale = Vector2( 1.0078, 1 )
texture = ExtResource( 1 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 7.009, -15 )
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
position = Vector2( 135.611, 232.022 )
frames = SubResource( 2 )
animation = "flapred"

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 145.92, 255.921 )
offset = Vector2( -10, 0 )
current = true
limit_top = 0
limit_bottom = 500

[node name="Timer" type="Timer" parent="Player"]
wait_time = 0.3
autostart = true

[node name="Play" type="Timer" parent="Player"]
wait_time = 0.42

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="flappyrights" type="Sprite" parent="CanvasLayer"]
position = Vector2( 142.627, 423 )
scale = Vector2( 2, 2 )
texture = ExtResource( 18 )

[node name="FlappyBird" type="Sprite" parent="CanvasLayer"]
position = Vector2( 140, 165 )
scale = Vector2( 2, 2 )
texture = ExtResource( 17 )

[node name="Scoreboard" type="Button" parent="CanvasLayer"]
margin_left = 160.0
margin_top = 342.0
margin_right = 263.0
margin_bottom = 398.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scoreboard" type="Sprite" parent="CanvasLayer/Scoreboard"]
position = Vector2( 52, 29 )
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )

[node name="Play" type="Button" parent="CanvasLayer"]
margin_left = 26.0
margin_top = 341.0
margin_right = 127.0
margin_bottom = 398.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="Sprite" parent="CanvasLayer/Play"]
position = Vector2( 51, 30 )
scale = Vector2( 2, 2 )
texture = ExtResource( 16 )

[node name="Rate" type="Button" parent="CanvasLayer"]
margin_left = 114.0
margin_top = 272.0
margin_right = 174.0
margin_bottom = 308.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rate" type="Sprite" parent="CanvasLayer/Rate"]
position = Vector2( 30, 18 )
scale = Vector2( 2, 2 )
texture = ExtResource( 14 )

[node name="woosh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
[connection signal="timeout" from="Player/Timer" to="Player" method="_on_Timer_timeout"]
[connection signal="timeout" from="Player/Play" to="." method="_on_Play_timeout"]
[connection signal="pressed" from="CanvasLayer/Play" to="." method="_on_Play_pressed"]
